--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -67,9 +67,25 @@
         .notification.success { background: #4CAF50; }
         .notification.error { background: #f44336; }
 		/* Responsive Styles for Dashboard on Mobile */
+/* --- Responsive Styles for Mobile --- */
 @media (max-width: 768px) {
+    .container {
+        padding: 10px;
+    }
+    .header {
+        flex-direction: column;
+        gap: 15px;
+    }
+    .logo {
+        font-size: 1.8em;
+    }
+    .dashboard-section {
+        padding: 15px;
+    }
+    
+    /* --- Table to Card Transformation --- */
     .data-table thead {
-        display: none; /* إخفاء العناوين الرئيسية للجدول */
+        display: none; /* إخفاء عناوين الجدول الرئيسية */
     }
     .data-table, .data-table tbody, .data-table tr, .data-table td {
         display: block;
@@ -83,29 +99,34 @@
         background: rgba(0,0,0,0.1);
     }
     .data-table td {
-        text-align: right; /* محاذاة النص لليمين */
-        padding-left: 50%; /* إعطاء مساحة للعنوان */
+        text-align: right; /* محاذاة المحتوى لليمين */
+        padding-left: 50%; /* ترك مساحة للعنوان على اليسار */
         position: relative;
         border-bottom: 1px dotted var(--border-color);
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     .data-table td:last-child {
         border-bottom: none;
     }
     .data-table td::before {
-        content: attr(data-label); /* عرض العنوان الذي أضفناه */
+        content: attr(data-label); /* عرض العنوان من خاصية data-label */
         position: absolute;
         left: 10px;
         width: 45%;
         padding-right: 10px;
         font-weight: bold;
         text-align: left;
+        color: var(--subtext-color, #e0e0e0);
     }
     .action-buttons {
         justify-content: flex-end; /* محاذاة الأزرار لليمين */
+        padding-top: 5px; /* إضافة مسافة */
     }
     .link-container {
         flex-direction: column;
         align-items: stretch;
+        gap: 10px;
     }
 }
     </style>
